Fix the header links to work on smaller devices

--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -21,6 +21,12 @@
     padding-top: 10rem;
     padding-bottom: 5rem;
   }
+
+  @media (max-width: $breakpoint-small) {
+    padding: 2rem;
+    padding-top: 10rem;
+    padding-bottom: 1rem;
+  }
 }
 
 .aboutMe_header {
