--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   flex-direction: column;
   height: calc(100vh - 90px);
-  min-height: 850px;
+  min-height: 1000px;
 }
 
 .intro_header {
@@ -18,6 +18,7 @@
   z-index: 1;
   position: relative;
   padding: 2rem;
+  text-wrap: nowrap;
 
   @media (max-width: $breakpoint-medium) {
     font-size: 0.8rem;
@@ -25,10 +26,6 @@
 
   @media (max-width: $breakpoint-small) {
     font-size: 0.6rem;
-  }
-
-  @media (max-width: $breakpoint-extraSmall) {
-    font-size: 0.5rem;
   }
 }
 
@@ -48,11 +45,6 @@
   @media (max-width: $breakpoint-small) {
     font-size: 2.25rem;
     line-height: 3rem;
-  }
-
-  @media (max-width: $breakpoint-extraSmall) {
-    font-size: 2rem;
-    line-height: 2.5rem;
   }
 }
 
